--- a/package.json
+++ b/package.json
@@ -15,28 +15,29 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.84.0",
-    "class-variance-authority": "^0.7.1",
+
+
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+
     "lucide-react": "^0.554.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
+    "next-with-linaria": "^1.3.0",
+
     "react": "19.2.0",
-    "react-day-picker": "^9.11.1",
+
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
-    "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.12"
+
+    "zod": "^4.1.12",
+    "@wyw-in-js/babel-preset": "^0.8.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
