--- a/package.json
+++ b/package.json
@@ -10,27 +10,23 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@linaria/core": "^6.3.0",
+    "@linaria/react": "^6.3.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.84.0",
-
-
+    "@wyw-in-js/babel-preset": "^0.8.0",
     "clsx": "^2.1.1",
-
     "lucide-react": "^0.554.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
     "next-with-linaria": "^1.3.0",
-
     "react": "19.2.0",
-
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
-
-    "zod": "^4.1.12",
-    "@wyw-in-js/babel-preset": "^0.8.0"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
