--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-themes": "^0.4.6",
     "next-with-linaria": "^1.3.0",
     "react": "19.2.0",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "zod": "^4.1.12"
