--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "lucide-react": "^0.554.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
+    "next-transpile-modules": "^10.0.1",
     "next-with-linaria": "^1.3.0",
     "react": "19.2.0",
+    "react-calendar": "^6.0.0",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
